Add to projective.t and add bib for bezout

--- a/LaTeX/master.bib
+++ b/LaTeX/master.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Will Bolton at 2016-03-22 15:07:45 +0000 
+%% Created for Will Bolton at 2016-03-23 11:46:02 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{bix2006,
+	Author = {Bix, Robert},
+	Date-Added = {2016-03-23 11:44:29 +0000},
+	Date-Modified = {2016-03-23 11:44:47 +0000},
+	Publisher = {Springer Science \& Business Media},
+	Title = {Conics and cubics: a concrete introduction to algebraic curves},
+	Year = {2006}}
 
 @book{miranda1995,
 	Author = {Miranda, Rick},
