Update header for encoding etc

--- a/LaTeX/header.tex
+++ b/LaTeX/header.tex
@@ -1,5 +1,9 @@
 % Package input
 \usepackage[textwidth=15cm,textheight=23cm]{geometry}
+\usepackage[UKenglish]{babel}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage{lmodern}
 \usepackage{graphicx}
 \usepackage{natbib}
 \usepackage{amsmath}
