--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -27,7 +27,11 @@
 \subsection{Elliptic Curves Over Finite Fields}
 \input{finiteelliptic.tex}
 \subsection{The Number of Points on an Elliptic Curve}
+\subsubsection{Naïve Counting} % THIS INCONSISTENCY WILL BE AMENDED IN THE NEXT COMMIT
+\lipsum[1-3]
+\subsubsection{The Hasse-Weil Estimate and Schoof's Algorithm}
 \input{h-w.tex}
+\subsubsection{Gauss' Theorem}
 \input{gauss.tex}
 \subsection{Lenstra's Algorithm}
 \input{modexalgorithm.tex}
