Reorganisation of tex structure (again)
Another reorganisation of the document meta-structure, to standardise
the diss.t document as one input command per subsection. The input
nesting is now at three levels, starting with diss.t, then the
subsections, then anything called by the subsection .tex's.

--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -27,14 +27,8 @@
 \subsection{Elliptic Curves Over Finite Fields}
 \input{finiteelliptic.tex}
 \subsection{The Number of Points on an Elliptic Curve}
-\subsubsection{Naïve Counting} % THIS INCONSISTENCY WILL BE AMENDED IN THE NEXT COMMIT
-\lipsum[1-3]
-\subsubsection{The Hasse-Weil Estimate and Schoof's Algorithm}
-\input{h-w.tex}
-\subsubsection{Gauss' Theorem}
-\input{gauss.tex}
+\input{points.tex}
 \subsection{Lenstra's Algorithm}
-\input{modexalgorithm.tex}
 \input{lenstraalgorithm.tex}
 \clearpage
 
