Reorganise document meta-structure (yet again)
In header, added custom command for complex numbers, which was
previously missed, Also changed theorem, proposition etc numbering to
section, since there aren't actually a great deal of them.

In diss.t, move motivation to unnumbered section at beginning, and add
entry in toc to reflect this.

--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -11,10 +11,13 @@
 \tableofcontents
 \clearpage
 
-\section{Prerequisites}
-\subsection{Motivation}
+\section*{Motivation}
+\addcontentsline{toc}{section}{Motivation}
 \input{motivation.tex}
 \nocite{*}
+\clearpage
+
+\section{Prerequisites}
 \subsection{Finite Fields}
 \input{finitefieldsdefinitions.tex}
 \subsection{The Projective Plane}
