--- a/LaTeX/header.tex
+++ b/LaTeX/header.tex
@@ -55,15 +55,16 @@
  
 % Theorem environment (this is a bit different because there is a \newtheorem command)
 % Syntax \newtheorem{ <<name>> }{ <<Displayed Title>> }[ <<Where to take numbering from>> ]
-\newtheorem{theorem}{Theorem}[subsection]
-\newtheorem{lemma}{Lemma}[subsection]
-\newtheorem{proposition}{Proposition}[subsection]
-\newtheorem{corollary}{Corollary}[subsection]
+\newtheorem{theorem}{Theorem}[section]
+\newtheorem{lemma}{Lemma}[section]
+\newtheorem{proposition}{Proposition}[section]
+\newtheorem{corollary}{Corollary}[section]
 
 % Custom commands
 \newcommand{\ud}{\, {\rm d} \kern-.015em }
 \newcommand{\bm}[1]{\mbox{\protect\boldmath $ #1 $}}
 \newcommand{\Q}{\mathbb{Q}}
+\newcommand{\C}{\mathbb{C}}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Z}{\mathbb{Z}}
