Start implementing feedback from Nadia
For changes to tex, only really changed the [htbp] priorities of some
figure environments that were accidentally set to [htpb].

Otherwise, as title. Started from the beginning of the printed out draft
with annotated feedback from Nadia implementing the suggested changes.
Got as far as the first two subsections of section 1 in this commit.
Definitely have not finished with them yet though. See the diff for all
changes.

--- a/LaTeX/ellipticdefinitions.tex
+++ b/LaTeX/ellipticdefinitions.tex
@@ -16,7 +16,7 @@ So for example, $F(X,Y,Z) = X^3 + 2XYZ + \frac{1}{2}YZ^2$ defines an elliptic cu
 Our interest in elliptic curves is mainly concentrated on a special property, unique to them.
 It is possible to turn the set of points of an elliptic curve $E$ into a group by introducing a special addition law that satisfies all of the group axioms.
 We do not prove this in this document for the sake of brevity but there are many proper treatments elsewhere, such as \cite{silverman2009}.
-\begin{figure}[htpb]
+\begin{figure}[htbp]
 	\centering
 	\includegraphics[scale=0.5]{addition.png}
 	\caption{The chord-tangent composition law on an elliptic curve}
