--- a/LaTeX/projectivedefinitions.tex
+++ b/LaTeX/projectivedefinitions.tex
@@ -1,24 +1,24 @@
-\subsubsection{Affine Space}
+\subsubsection{Affine Space and Affine Curves}
 The main object of interest in this subsection is the projective plane.
 Before we introduce it, though, we begin with a prerequisite definition.
 
 \begin{definition}
 	Let $k$ be an algebraically closed field. Define affine $n$-space, or $\an$, to be the set of all $n$-tuples, or points,
-	$$\an = \{ (a_1,a_2,\ldots,a_n) | a_i \in \C\}.$$
+	$$\an = \{ (a_1,a_2,\ldots,a_n) | a_i \in k\}.$$
 \end{definition}
 
-The consideration of algebraically closed fields differentiates affine space from $\R^2$, where, unless otherwise mentioned, we take the field $k = \C$.
+The consideration of algebraically closed fields differentiates affine space from $\R^n$, where from now on, unless otherwise mentioned, we take the field $k = \C$.
+% note about how we don't need to use C necessarily?
 We call affine 2-space, or $\an[2]$, the \emph{affine plane}.
 
-In the affine plane, it is possible to define \emph{affine curves} in the following way.
+In affine $n$-space, it is possible to define \emph{affine curves} in the following way.
 \begin{definition}
-	For a given polynomial $f$ in two variables $x$ and $y$, an \emph{affine curve} is the set $V(f)$ of all points $(x,y)$ such that $f(x,y)=0$. More concisely,
-	$$V(f) = \{(x,y) | f(x,y)=0$$
+	In $\an$, for a given polynomial $f$ in $n$ variables $x_1,\ldots,x_n$, an \emph{affine curve} is the set $V(f)$ of all points $(x_1,\ldots,x_n)$ such that $f(x_1,\ldots,x_n)=0$. More concisely,
+	$$V(f) = \{(x_1,\ldots,x_n) | f(x_1,\ldots,x_n)=0$$
 \end{definition}
-It is important to distinguish the two objects $V(f)$ and $f$, as $f$ is simply a polynomial, whereas $V(f)$ is the set of points that are a solution to a polynomial \emph{equation} $f(x,y)=0$.
-However, for convenience, we write the curve $V(f)$ as its defining polynomial equation $f(x,y)=0$, when it is clear to do so.
-The distinction of objects remains, though, and this is purely notational.
-% unfinished
+\Cref{affinecurveexample} shows an example of an affine curve.
+
+% unfinished diagram
 \begin{figure}[htbp]
 	\centering
 	\begin{tikzpicture}[scale=0.5,domain=-5:5]
@@ -31,16 +31,22 @@ The distinction of objects remains, though, and this is purely notational.
 		\draw 
 		plot (\x, {\x});
 	\end{tikzpicture}
-	\caption{The affine curve $x^3 - 2xy = 0$}
+	\caption{The affine curve $x^3 - 2xy = 0$ in the visible part of $\an[2]$}
 	\label{affinecurveexample}
 \end{figure}
 
+It is important to distinguish the two objects $V(f)$ and $f$, as $f$ is simply a polynomial, whereas $V(f)$ is the set of points that are a solution to a polynomial \emph{equation} $f(x_1,\ldots,x_n)=0$.
+However, for convenience, we write the curve $V(f)$ as its defining polynomial equation $f(x,y)=0$, when it is clear to do so.
+The distinction of objects remains, though, and this is purely notational. Another point on notation is that in the affine plane, instead of $x_1$ and $x_2$, we write $x$ and $y$.
 \subsubsection{Projective Space}
+Now that affine space has been introduced, we are ready to introduce projective $n$-space $\pn$, and with that, the projective plane $\pn[2]$.
+
 The projective plane is an idea that grew out of the renaissance study of perspective in art.
 For example, when stood between two railway lines, they appear to meet at the horizon.
-\Cref{projective-parallel} is a rudimentary diagram of the situation.
+\Cref{projective-parallel} is a diagram of the situation.
 While this is merely a trick of perspective in euclidean space, in the projective plane, parallel lines \emph{do} meet, at a so called `point at infinity'.
-The idea is to add these points at infinity to the euclidean plane so that each line contains exactly one.
+% euclidean/affine? What?
+The idea is to add these points at infinity to the affine plane so that each line contains exactly one.
 On top of this is the one exception, the `line at infinity', which is defined to be the unique line that is simply the collection of all points at infinity.
 These ideas, while formative, are not rigorous, and we present the proper definition and constructions (there are two) of projective space below.
 
